# podcast-stats

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/: podcast-transcription-plan.md
src/: __init__.py  cli.py  diarizer.py  openai_transcriber.py  pipeline.py  speaker_tracker.py  transcriber.py
